{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "37ebc56d-132a-414f-a0e8-83d81cca6578",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "dc4cfef2-0da5-462c-a566-878c13699258",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "1fdf500b-9eb3-43f8-a0b3-3e3192efc160",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "2dac163f-7d46-4a1d-a344-67fbbbe5ab3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookAround",
                    "type": "Button",
                    "id": "26ec3fc4-ddc6-477a-81d8-c24ce76451e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "65eaf0a0-ad77-4c59-971c-33f9625f3b00",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4de9af67-8043-4774-aad7-e019223d3d7b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "007ee2d0-79e2-4a58-a649-2a5009793698",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6f59ca39-aa04-4479-b758-4719228584bb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a7264248-8168-4ca7-a17e-b601bf5f2747",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fcdaac65-4cdd-4483-a6bd-d7f805e22ab1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45b39e4d-077c-40d0-a6ea-230d9873a3ae",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "597d7455-b6d6-4a52-8f84-50669f220ce9",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}